// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch renders 1`] = `
<div
  className="sc-eBSEYL kDynpz"
  dir="ltr"
  style={
    Object {
      "overflow": "visible",
    }
  }
>
  <label
    className="sc-fHGsUi jaurIm"
    disabled={false}
    size="sm"
  >
    <input
      checked={true}
      className="sc-iBPSDD kuchse"
      id="test-switch-1"
      onChange={[Function]}
      size="sm"
      type="checkbox"
    />
    <span
      checked={true}
      className="sc-lcfOiJ gSWEUo"
      size="sm"
    />
  </label>
</div>
`;

exports[`Switch renders Buttons 1`] = `
<div
  className="flex gap-20 items-center"
>
  <div
    className="sc-eBSEYL kDynpz"
    dir="ltr"
    style={
      Object {
        "overflow": "visible",
      }
    }
  >
    <label
      className="sc-fHGsUi bnJUac"
      disabled={false}
      size="md"
    >
      <input
        checked={true}
        className="sc-iBPSDD kuchse"
        id="button-switch-1"
        onChange={[Function]}
        size="md"
        type="checkbox"
      />
      <span
        checked={true}
        className="sc-lcfOiJ dftuAH"
        size="md"
      >
        <span
          className="sc-gHGAhJ dNGOoI"
        >
          <p
            className="sc-iKKmqK ezlnSw"
            color="bulma.100"
            size={16}
          >
            Off
          </p>
          <p
            className="sc-iKKmqK ezlnSw"
            color="bulma.100"
            size={16}
          >
            On
          </p>
        </span>
      </span>
    </label>
  </div>
  <div
    className="sc-eBSEYL kDynpz"
    dir="ltr"
    style={
      Object {
        "overflow": "visible",
      }
    }
  >
    <label
      className="sc-fHGsUi hBtlvf"
      disabled={false}
      size="lg"
    >
      <input
        checked={true}
        className="sc-iBPSDD kuchse"
        id="button-switch-2"
        onChange={[Function]}
        size="lg"
        type="checkbox"
      />
      <span
        checked={true}
        className="sc-lcfOiJ dftuAH"
        size="lg"
      >
        <span
          className="sc-gHGAhJ dNGOoI"
        >
          <p
            className="sc-iKKmqK ezlnSw"
            color="bulma.100"
            size={16}
          >
            Off
          </p>
          <p
            className="sc-iKKmqK ezlnSw"
            color="bulma.100"
            size={16}
          >
            On
          </p>
        </span>
      </span>
    </label>
  </div>
</div>
`;

exports[`Switch renders Disabled state 1`] = `
<div
  className="flex gap-20 items-center"
>
  <div
    className="sc-eBSEYL kDynpz"
    dir="ltr"
    style={
      Object {
        "overflow": "visible",
      }
    }
  >
    <label
      className="sc-fHGsUi eODkHI"
      disabled={true}
      size="sm"
    >
      <input
        checked={true}
        className="sc-iBPSDD kuchse"
        id="test-switch-disabled-checked"
        onChange={[Function]}
        size="sm"
        type="checkbox"
      />
      <span
        checked={true}
        className="sc-lcfOiJ gSWEUo"
        size="sm"
      />
    </label>
  </div>
  <div
    className="sc-eBSEYL kDynpz"
    dir="ltr"
    style={
      Object {
        "overflow": "visible",
      }
    }
  >
    <label
      className="sc-fHGsUi eODkHI"
      disabled={true}
      size="sm"
    >
      <input
        checked={false}
        className="sc-iBPSDD kuchse"
        id="test-switch-disabled"
        onChange={[Function]}
        size="sm"
        type="checkbox"
      />
      <span
        checked={false}
        className="sc-lcfOiJ kZZGxA"
        size="sm"
      />
    </label>
  </div>
</div>
`;

exports[`Switch renders Theme variant 1`] = `
<div
  className="flex gap-20 items-center"
>
  <div
    className="sc-eBSEYL kDynpz"
    dir="ltr"
    style={
      Object {
        "overflow": "visible",
      }
    }
  >
    <label
      className="sc-fHGsUi CsiyQ"
      disabled={false}
      size="2xs"
    >
      <input
        checked={true}
        className="sc-iBPSDD bbdwSz"
        id="test-switch-1"
        onChange={[Function]}
        size="2xs"
        type="checkbox"
      />
      <span
        checked={true}
        className="sc-lcfOiJ frbpnm"
        size="2xs"
      />
    </label>
  </div>
  <div
    className="sc-eBSEYL kDynpz"
    dir="ltr"
    style={
      Object {
        "overflow": "visible",
      }
    }
  >
    <label
      className="sc-fHGsUi fLGzfj"
      disabled={false}
      size="xs"
    >
      <input
        checked={true}
        className="sc-iBPSDD knIKsr"
        id="test-switch-2"
        onChange={[Function]}
        size="xs"
        type="checkbox"
      />
      <span
        checked={true}
        className="sc-lcfOiJ irWnIz"
        size="xs"
      />
    </label>
  </div>
  <div
    className="sc-eBSEYL kDynpz"
    dir="ltr"
    style={
      Object {
        "overflow": "visible",
      }
    }
  >
    <label
      className="sc-fHGsUi jaurIm"
      disabled={false}
      size="sm"
    >
      <input
        checked={true}
        className="sc-iBPSDD knIKsr"
        id="test-switch-3"
        onChange={[Function]}
        size="sm"
        type="checkbox"
      />
      <span
        checked={true}
        className="sc-lcfOiJ irWnIz"
        size="sm"
      />
    </label>
  </div>
</div>
`;

exports[`Switch renders different Sizes 1`] = `
<div
  className="flex gap-20 items-center"
>
  <div
    className="sc-eBSEYL kDynpz"
    dir="ltr"
    style={
      Object {
        "overflow": "visible",
      }
    }
  >
    <label
      className="sc-fHGsUi CsiyQ"
      disabled={false}
      size="2xs"
    >
      <input
        checked={true}
        className="sc-iBPSDD konwfO"
        id="test-switch-1"
        onChange={[Function]}
        size="2xs"
        type="checkbox"
      />
      <span
        checked={true}
        className="sc-lcfOiJ lfAKCN"
        size="2xs"
      />
    </label>
  </div>
  <div
    className="sc-eBSEYL kDynpz"
    dir="ltr"
    style={
      Object {
        "overflow": "visible",
      }
    }
  >
    <label
      className="sc-fHGsUi fLGzfj"
      disabled={false}
      size="xs"
    >
      <input
        checked={true}
        className="sc-iBPSDD kuchse"
        id="test-switch-2"
        onChange={[Function]}
        size="xs"
        type="checkbox"
      />
      <span
        checked={true}
        className="sc-lcfOiJ gSWEUo"
        size="xs"
      />
    </label>
  </div>
  <div
    className="sc-eBSEYL kDynpz"
    dir="ltr"
    style={
      Object {
        "overflow": "visible",
      }
    }
  >
    <label
      className="sc-fHGsUi jaurIm"
      disabled={false}
      size="sm"
    >
      <input
        checked={true}
        className="sc-iBPSDD kuchse"
        id="test-switch-3"
        onChange={[Function]}
        size="sm"
        type="checkbox"
      />
      <span
        checked={true}
        className="sc-lcfOiJ gSWEUo"
        size="sm"
      />
    </label>
  </div>
</div>
`;
